<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".DaftarMejaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="700dp"
            app:cardCornerRadius="0dp"
            app:cardElevation="200dp"
            android:layout_margin="16dp"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="380dp"
                android:layout_height="match_parent"
                android:padding="20dp">

                <TextView
                    android:id="@+id/label_daftar_meja"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="@string/label_menu_1"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearlayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/label_daftar_meja"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="horizontal"
                    android:layout_margin="30dp"
                    >

                    <Button
                        android:id="@+id/btn_meja_1"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/meja_1"
                        android:layout_marginRight="10dp"
                        android:onClick="hitung"
                        />

                    <Button
                        android:id="@+id/btn_meja_2"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/meja_2"
                        android:onClick="hitung"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearlayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/linearlayout1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="horizontal"
                    android:layout_margin="30dp"
                    >

                    <Button
                        android:id="@+id/btn_meja_3"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:text="@string/meja_3"
                        android:layout_marginRight="10dp"
                        android:onClick="hitung"
                        />

                    <Button
                        android:id="@+id/btn_meja_4"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/meja_4"
                        android:onClick="hitung"
                        />
                </LinearLayout>



            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>



