<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="productSatu"
            type="com.example.aplikasipesanmakanan.Product" />
        <variable
            name="productDua"
            type="com.example.aplikasipesanmakanan.Product" />
        <variable
            name="productTiga"
            type="com.example.aplikasipesanmakanan.Product" />
        <variable
            name="nomorMeja"
            type="String" />
        <variable
            name="total"
            type="Integer" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".DaftarBayarFragment"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="700dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="200dp"
                android:layout_margin="16dp"
                tools:ignore="MissingConstraints"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="380dp"
                    android:layout_height="677dp"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/label_daftar_bayar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_medium"
                        android:text="@string/label_bayar_empty"
                        android:textSize="24dp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/linearlayout7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/label_daftar_bayar">

                        <TextView
                            android:id="@+id/tv_nama_makanan_1"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:hint="Makanan"
                            android:text="@{productSatu.namaMenu}" />

                        <TextView
                            android:id="@+id/tv_harga_1"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:hint="0"
                            android:text="@{String.valueOf(productSatu.hargaMenu)}" />

                        <TextView
                            android:id="@+id/tv_jumlah_1"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:hint="0"
                            android:text="@{String.valueOf(productSatu.jumlahMenu)}" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearlayout8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/linearlayout7">

                        <TextView
                            android:id="@+id/tv_nama_makanan_2"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:hint="Makanan"
                            android:text="@{productDua.namaMenu}" />

                        <TextView
                            android:id="@+id/tv_harga_2"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:hint="0"
                            android:text="@{String.valueOf(productDua.hargaMenu)}" />

                        <TextView
                            android:id="@+id/tv_jumlah_2"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:hint="0"
                            android:text="@{String.valueOf(productDua.jumlahMenu)}" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearlayout9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/linearlayout8">

                        <TextView
                            android:id="@+id/tv_nama_makanan_3"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:hint="Makanan"
                            android:text="@{productTiga.namaMenu}" />

                        <TextView
                            android:id="@+id/tv_harga_3"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:hint="0"
                            android:text="@{String.valueOf(productTiga.hargaMenu)}" />

                        <TextView
                            android:id="@+id/tv_jumlah_3"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:hint="0"
                            android:text="@{String.valueOf(productTiga.jumlahMenu)}" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/label_sub_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:fontFamily="@font/quicksand_medium"
                        android:text="@string/label_sub_total"
                        android:textSize="24dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/linearlayout9" />

                    <LinearLayout
                        android:id="@+id/linearlayout10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/label_sub_total">

                        <TextView
                            android:id="@+id/tv_sub_makanan_1"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:hint="Makanan"
                            android:text="@{productSatu.namaMenu}" />

                        <TextView
                            android:id="@+id/tv_sub_harga_1"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:hint="0"
                            android:text="@{String.valueOf(productSatu.hargaMenu * productSatu.jumlahMenu)}" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearlayout11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/linearlayout10">

                        <TextView
                            android:id="@+id/tv_sub_makanan_2"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:hint="Makanan"
                            android:text="@{productDua.namaMenu}" />

                        <TextView
                            android:id="@+id/tv_sub_harga_2"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:hint="0"
                            android:text="@{String.valueOf(productDua.hargaMenu * productDua.jumlahMenu)}" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearlayout12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/linearlayout11">

                        <TextView
                            android:id="@+id/tv_sub_makanan_3"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:hint="Makanan"
                            android:text="@{productTiga.namaMenu}" />

                        <TextView
                            android:id="@+id/tv_sub_harga_3"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:hint="0"
                            android:text="@{String.valueOf(productTiga.hargaMenu * productTiga.jumlahMenu)}" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/label_grand_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:fontFamily="@font/quicksand_medium"
                        android:text="@string/label_grand_total"
                        android:textSize="24dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/linearlayout12" />

                    <LinearLayout
                        android:id="@+id/linearlayout13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/label_grand_total">

                        <TextView
                            android:id="@+id/tv_harga_bayar"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:text="@string/harga_dibayar" />

                        <TextView
                            android:id="@+id/tv_grand_total"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:hint="0"
                            android:text="@{String.valueOf(total)}" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearlayout14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="30dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/linearlayout13">

                        <Button
                            android:id="@+id/btn_home"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="10dp"
                            android:text="@string/btn_kembali_menu_awal" />

                        <Button
                            android:id="@+id/btn_menu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="clearMenu"
                            android:text="@string/btn_kembali_form_menu" />
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>



